// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MemberPlanPicker should render Default 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  gap: 24px;
  margin: unset;
  padding: unset;
  border: unset;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  gap: 16px;
}

.emotion-3 label {
  margin: 0;
}

.emotion-3 label>span {
  display: none;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  margin-left: -11px;
  margin-right: 16px;
}

.emotion-4.Mui-disabled {
  cursor: default;
}

.emotion-4 .MuiFormControlLabel-label.Mui-disabled {
  color: rgba(0, 0, 0, 0.38);
}

.emotion-5 {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 16px;
  background-color: #f5f5f5;
  border-radius: 4px;
  border: 1px solid rgba(0, 0, 0, 0.12);
  border-color: #1976d2;
  background-color: rgb(220, 234, 248);
}

.emotion-7 {
  display: grid;
}

.emotion-9 {
  font-weight: 500;
}

.emotion-11 {
  font-size: 0.75em;
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  padding: 9px;
  border-radius: 50%;
  color: rgba(0, 0, 0, 0.6);
}

.emotion-13::-moz-focus-inner {
  border-style: none;
}

.emotion-13.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-13 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-13.Mui-checked {
  color: #1976d2;
}

.emotion-13.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
}

.emotion-14 {
  cursor: inherit;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  margin: 0;
  padding: 0;
  z-index: 1;
}

.emotion-15 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-16 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-17 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
  left: 0;
  position: absolute;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: -webkit-transform 150ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: transform 150ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

.emotion-18 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  letter-spacing: 0.00938em;
}

.emotion-20 {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 16px;
  background-color: #f5f5f5;
  border-radius: 4px;
  border: 1px solid rgba(0, 0, 0, 0.12);
}

.emotion-32 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
  left: 0;
  position: absolute;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: -webkit-transform 150ms cubic-bezier(0.4, 0, 1, 1) 0ms;
  transition: transform 150ms cubic-bezier(0.4, 0, 1, 1) 0ms;
}

.emotion-49 {
  max-width: 100%;
  width: 100%;
  height: auto;
  aspect-ratio: auto 0.6666666666666666;
}

.emotion-53 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  letter-spacing: 0.00938em;
  margin-bottom: 0.35em;
}

<fieldset
    class="emotion-0 emotion-1"
  >
    <div
      class="MuiFormGroup-root emotion-2 emotion-3"
      role="radiogroup"
    >
      <label
        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-4"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <span
              class="emotion-9 emotion-10"
            >
              Foobar Memberplan
            </span>
            <small
              class="emotion-11 emotion-12"
            >
              Ab CHF 50.- pro Monat
            </small>
          </div>
          <span
            class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-checked MuiRadio-root MuiRadio-colorPrimary emotion-13"
          >
            <input
              class="PrivateSwitchBase-input emotion-14"
              name="Foobar Memberplan"
              type="radio"
              value="123"
            />
            <span
              class="emotion-15"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-16"
                data-testid="RadioButtonUncheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-17"
                data-testid="RadioButtonCheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </span>
          </span>
        </div>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-18"
        >
          Foobar Memberplan
        </span>
      </label>
      <label
        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-4"
      >
        <div
          class="emotion-20 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <span
              class="emotion-9 emotion-10"
            >
              Foobar Memberplan
            </span>
            <small
              class="emotion-11 emotion-12"
            >
              Ab CHF 50.- pro Monat
            </small>
          </div>
          <span
            class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-root MuiRadio-colorPrimary emotion-13"
          >
            <input
              class="PrivateSwitchBase-input emotion-14"
              name="Foobar Memberplan"
              type="radio"
              value="2"
            />
            <span
              class="emotion-15"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-16"
                data-testid="RadioButtonUncheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-32"
                data-testid="RadioButtonCheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </span>
          </span>
        </div>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-18"
        >
          Foobar Memberplan
        </span>
      </label>
      <label
        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-4"
      >
        <div
          class="emotion-20 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <span
              class="emotion-9 emotion-10"
            >
              Foobar Memberplan
            </span>
            <small
              class="emotion-11 emotion-12"
            >
              Ab CHF 50.- pro Monat
            </small>
          </div>
          <span
            class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-root MuiRadio-colorPrimary emotion-13"
          >
            <input
              class="PrivateSwitchBase-input emotion-14"
              name="Foobar Memberplan"
              type="radio"
              value="3"
            />
            <span
              class="emotion-15"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-16"
                data-testid="RadioButtonUncheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-32"
                data-testid="RadioButtonCheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </span>
          </span>
        </div>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-18"
        >
          Foobar Memberplan
        </span>
      </label>
    </div>
    <img
      alt="DSC07717"
      class="emotion-49 emotion-50"
      loading="lazy"
      srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
      title=""
    />
    <div
      class="emotion-51 emotion-52"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-53"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`MemberPlanPicker should render Selected 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -28,10 +28,11 @@
            </div>
            <span
              class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-checked MuiRadio-root MuiRadio-colorPrimary css-19x3w69-MuiButtonBase-root-MuiRadio-root"
            >
              <input
+               checked=""
                class="PrivateSwitchBase-input css-1m9pwf3"
                name="Foobar Memberplan"
                type="radio"
                value="123"
              />"
`;

exports[`MemberPlanPicker should render Single 1`] = `
"Snapshot Diff:
- First value
+ Second value

- <DocumentFragment>
-   <fieldset
-     class="css-ah3hxd-MemberPlanPickerWrapper es1nn8k1"
-   >
-     <div
-       class="MuiFormGroup-root es1nn8k0 css-1rn5vyy-MuiFormGroup-root-MemberPlanPickerRadios"
-       role="radiogroup"
-     >
-       <label
-         class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
-       >
-         <div
-           class="css-146nkty-MemberPlanItemWrapper eofgi43"
-         >
-           <div
-             class="css-1deqsbg-MemberPlanItemContent eofgi42"
-           >
-             <span
-               class="css-e8tfvl-MemberPlanItemName eofgi41"
-             >
-               Foobar Memberplan
-             </span>
-             <small
-               class="css-4q4uht-MemberPlanItemPrice eofgi40"
-             >
-               Ab CHF 50.- pro Monat
-             </small>
-           </div>
-           <span
-             class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-checked MuiRadio-root MuiRadio-colorPrimary css-19x3w69-MuiButtonBase-root-MuiRadio-root"
-           >
-             <input
-               class="PrivateSwitchBase-input css-1m9pwf3"
-               name="Foobar Memberplan"
-               type="radio"
-               value="123"
-             />
-             <span
-               class="css-hyxlzm"
-             >
-               <svg
-                 aria-hidden="true"
-                 class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1hbvpl3-MuiSvgIcon-root"
-                 data-testid="RadioButtonUncheckedIcon"
-                 focusable="false"
-                 viewBox="0 0 24 24"
-               >
-                 <path
-                   d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
-                 />
-               </svg>
-               <svg
-                 aria-hidden="true"
-                 class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-11zohuh-MuiSvgIcon-root"
-                 data-testid="RadioButtonCheckedIcon"
-                 focusable="false"
-                 viewBox="0 0 24 24"
-               >
-                 <path
-                   d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
-                 />
-               </svg>
-             </span>
-           </span>
-         </div>
-         <span
-           class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-ahj2mt-MuiTypography-root"
-         >
-           Foobar Memberplan
-         </span>
-       </label>
-       <label
-         class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
-       >
-         <div
-           class="css-19eiwdu-MemberPlanItemWrapper eofgi43"
-         >
-           <div
-             class="css-1deqsbg-MemberPlanItemContent eofgi42"
-           >
-             <span
-               class="css-e8tfvl-MemberPlanItemName eofgi41"
-             >
-               Foobar Memberplan
-             </span>
-             <small
-               class="css-4q4uht-MemberPlanItemPrice eofgi40"
-             >
-               Ab CHF 50.- pro Monat
-             </small>
-           </div>
-           <span
-             class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-root MuiRadio-colorPrimary css-19x3w69-MuiButtonBase-root-MuiRadio-root"
-           >
-             <input
-               class="PrivateSwitchBase-input css-1m9pwf3"
-               name="Foobar Memberplan"
-               type="radio"
-               value="2"
-             />
-             <span
-               class="css-hyxlzm"
-             >
-               <svg
-                 aria-hidden="true"
-                 class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1hbvpl3-MuiSvgIcon-root"
-                 data-testid="RadioButtonUncheckedIcon"
-                 focusable="false"
-                 viewBox="0 0 24 24"
-               >
-                 <path
-                   d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
-                 />
-               </svg>
-               <svg
-                 aria-hidden="true"
-                 class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1hhw7if-MuiSvgIcon-root"
-                 data-testid="RadioButtonCheckedIcon"
-                 focusable="false"
-                 viewBox="0 0 24 24"
-               >
-                 <path
-                   d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
-                 />
-               </svg>
-             </span>
-           </span>
-         </div>
-         <span
-           class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-ahj2mt-MuiTypography-root"
-         >
-           Foobar Memberplan
-         </span>
-       </label>
-       <label
-         class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
-       >
-         <div
-           class="css-19eiwdu-MemberPlanItemWrapper eofgi43"
-         >
-           <div
-             class="css-1deqsbg-MemberPlanItemContent eofgi42"
-           >
-             <span
-               class="css-e8tfvl-MemberPlanItemName eofgi41"
-             >
-               Foobar Memberplan
-             </span>
-             <small
-               class="css-4q4uht-MemberPlanItemPrice eofgi40"
-             >
-               Ab CHF 50.- pro Monat
-             </small>
-           </div>
-           <span
-             class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-root MuiRadio-colorPrimary css-19x3w69-MuiButtonBase-root-MuiRadio-root"
-           >
-             <input
-               class="PrivateSwitchBase-input css-1m9pwf3"
-               name="Foobar Memberplan"
-               type="radio"
-               value="3"
-             />
-             <span
-               class="css-hyxlzm"
-             >
-               <svg
-                 aria-hidden="true"
-                 class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1hbvpl3-MuiSvgIcon-root"
-                 data-testid="RadioButtonUncheckedIcon"
-                 focusable="false"
-                 viewBox="0 0 24 24"
-               >
-                 <path
-                   d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
-                 />
-               </svg>
-               <svg
-                 aria-hidden="true"
-                 class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1hhw7if-MuiSvgIcon-root"
-                 data-testid="RadioButtonCheckedIcon"
-                 focusable="false"
-                 viewBox="0 0 24 24"
-               >
-                 <path
-                   d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
-                 />
-               </svg>
-             </span>
-           </span>
-         </div>
-         <span
-           class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-ahj2mt-MuiTypography-root"
-         >
-           Foobar Memberplan
-         </span>
-       </label>
-     </div>
-     <img
-       alt="DSC07717"
-       class="css-1sg8o3u-ImageWrapper e1shv2yg0"
-       loading="lazy"
-       srcset="https://unsplash.it/800/400 800w,
- https://unsplash.it/500/300 500w,
- https://unsplash.it/300/200 300w,
- https://unsplash.it/200/100 200w"
-       title=""
-     />
-     <div
-       class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
-     >
-       <div
-         data-gramm="false"
-         data-slate-editor="true"
-         data-slate-node="value"
-         style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
-       >
-         <p
-           class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
-           data-slate-node="element"
-         >
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-             </span>
-           </span>
-         </p>
-       </div>
-     </div>
-   </fieldset>
- </DocumentFragment>
+ <DocumentFragment />"
`;

exports[`MemberPlanPicker should render WithClassName 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <DocumentFragment>
    <fieldset
-     class="css-ah3hxd-MemberPlanPickerWrapper es1nn8k1"
+     class="extra-classname css-ah3hxd-MemberPlanPickerWrapper es1nn8k1"
    >
      <div
        class="MuiFormGroup-root es1nn8k0 css-1rn5vyy-MuiFormGroup-root-MemberPlanPickerRadios"
        role="radiogroup"
      >"
`;

exports[`MemberPlanPicker should render WithEmotion 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <DocumentFragment>
    <fieldset
-     class="css-ah3hxd-MemberPlanPickerWrapper es1nn8k1"
+     class="css-u32rdq-MemberPlanPickerWrapper-css es1nn8k1"
    >
      <div
        class="MuiFormGroup-root es1nn8k0 css-1rn5vyy-MuiFormGroup-root-MemberPlanPickerRadios"
        role="radiogroup"
      >"
`;

exports[`MemberPlanPicker should render WithError 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`MemberPlanPicker should render WithLoading 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;
